--- a/MiniaturesGallery/Views/Rates/Edit.cshtml
+++ b/MiniaturesGallery/Views/Rates/Edit.cshtml
@@ -5,9 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
+<h1>@Localizer["Edit"]</h1>
 
-<h4>Rate</h4>
+<h4>@Localizer["Rate"]</h4>
 <hr />
 <div class="row">
     <div class="col-md-4">
@@ -30,14 +30,14 @@
                 <span asp-validation-for="UserID" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <input type="submit" value="Save" class="btn btn-primary" />
+                <input type="submit" value="@Localizer["Save"]" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">@Localizer["Back to List"]</a>
 </div>
 
 @section Scripts {
