--- a/MiniaturesGallery/Views/Rates/Index.cshtml
+++ b/MiniaturesGallery/Views/Rates/Index.cshtml
@@ -5,10 +5,10 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Index</h1>
+<h1>@Localizer["Index"]</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">@Localizer["Create New"]</a>
 </p>
 <table class="table">
     <thead>
@@ -32,9 +32,9 @@
                 @Html.DisplayFor(modelItem => item.UserID)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.ID">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.ID">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.ID">Delete</a>
+                <a asp-action="Edit" asp-route-id="@item.ID">@Localizer["Edit"]</a> |
+                <a asp-action="Details" asp-route-id="@item.ID">@Localizer["Details"]</a> |
+                <a asp-action="Delete" asp-route-id="@item.ID">@Localizer["Delete"]</a>
             </td>
         </tr>
 }
