--- a/MiniaturesGallery/Views/Shared/_Layout.cshtml
+++ b/MiniaturesGallery/Views/Shared/_Layout.cshtml
@@ -24,26 +24,27 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="Home" asp-action="Index">Home</a>
+                            <a class="nav-link" asp-controller="Home" asp-action="Index">@Localizer["Home"]</a>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle btn btn-primary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">Posts</a>
+                            <a class="nav-link dropdown-toggle btn btn-primary" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">@Localizer["Posts"]</a>
                             <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Posts" asp-action="Index">Index</a>
+                                    <a class="dropdown-item" asp-controller="Posts" asp-action="Index">@Localizer["Index"]</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Posts" asp-action="ScrollIndex">ScrollIndex</a>
+                                    <a class="dropdown-item" asp-controller="Posts" asp-action="ScrollIndex">@Localizer["ScrollIndex"]</a>
                                 </li>
                                 <li>
-                                    <a class="dropdown-item" asp-controller="Posts" asp-action="Create">Add Post</a>
+                                    <a class="dropdown-item" asp-controller="Posts" asp-action="Create">@Localizer["Add Post"]</a>
                                 </li>
                             </ul>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-controller="PostsAngular" asp-action="IndexAngular">Posts AngularJS</a>
+                            <a class="nav-link" asp-controller="PostsAngular" asp-action="IndexAngular">@Localizer["Posts"] AngularJS</a>
                         </li>
                     </ul>
+                    <partial name="_SelectLanguagePartial" />
                     <partial name="_LoginPartial" />
                 </div>
             </div>
@@ -58,7 +59,7 @@
     <footer class="border-top footer text-muted">
         <div class="container">
             &copy; 2022 - MiniaturesGallery
-        </div>
+                </div>
     </footer>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
