--- a/MiniaturesGallery/Views/_ViewImports.cshtml
+++ b/MiniaturesGallery/Views/_ViewImports.cshtml
@@ -1,3 +1,5 @@
-﻿@using MiniaturesGallery
+﻿@using Microsoft.AspNetCore.Mvc.Localization
+@using MiniaturesGallery
 @using MiniaturesGallery.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@inject IHtmlLocalizer<SharedResource> Localizer
